--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dash==2.0.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+flake8==4.0.1
 Flask==2.0.2
 Flask-Compress==1.10.1
 fonttools==4.28.3
@@ -14,11 +15,14 @@ kiwisolver==1.3.2
 MarkupSafe==2.0.1
 matplotlib==3.5.0
 matplotlip==0.2
+mccabe==0.6.1
 numpy==1.21.4
 packaging==21.3
 pandas==1.3.4
 Pillow==8.4.0
 plotly==5.4.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
